--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Savorly</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/savorly-frontend/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 
     <!-- Font Awesome -->
     <link
@@ -18,14 +18,14 @@
     />
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="/savorly-frontend/logo192.png" />
+    <link rel="apple-touch-icon" href="logo192.png" />
 
     <!-- Web App Manifest -->
-    <link rel="manifest" href="/savorly-frontend/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- No script tag needed — Vite injects it automatically -->
+    <!-- Vite injects scripts automatically -->
   </body>
 </html>
