--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site migrated to Vite" />
+    <meta name="description" content="Savorly" />
 
     <title>Savorly</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.png" />
-
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 
     <!-- Font Awesome -->
     <link
@@ -19,17 +18,16 @@
     />
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="logo192.png" />
 
     <!-- Web App Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <!-- Vite injects scripts automatically, so no need for manual script tags -->
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="./src/index.jsx"></script>
 
   </body>
 </html>
